--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -19,3 +19,19 @@
 # [[override]]
 #  name = "github.com/x/y"
 #  version = "2.4.0"
+
+[[constraint]]
+   name = "k8s.io/apimachinery"
+   branch = "release-1.13"
+
+[[constraint]]
+   name = "k8s.io/api"
+   branch = "release-1.13"
+
+[[constraint]]
+   name = "k8s.io/client-go"
+   version = "v10.0.0"
+
+[prune]
+  go-tests = true
+  unused-packages = true
