--- a/artifacts/deploy.yaml
+++ b/artifacts/deploy.yaml
@@ -1,27 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hatoba-backup-controller
-  namespace: hatoba-backup
+  name: k8s-backup-controller
+  namespace: k8s-backup
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: hatoba-backup-controller
+      app: k8s-backup-controller
   template:
     metadata:
       labels:
-        app: hatoba-backup-controller
+        app: k8s-backup-controller
     spec:
       containers:
-        - name: hatoba-backup-controller
-          image: container-registry.devops.nifcloud.net/x_nke/hatoba-backup-controller:[TAG]
+        - name: k8s-backup-controller
+          image: [image]:[TAG]
           command:
-            - /hatoba-backup-controller
-            - --arkimage=haproxy:gcr.io/heptio-images/ark:v0.10.0
-            - --kubectlimage=lachlanevenson/k8s-kubectl
-            - --haproxyimage=haproxy:1.8-alpine
-            - --namespace=hatoba-backup
-            - --ark-namespace=heptio-ark
+            - /k8s-backup-controller
+            - --namespace=k8s-backup
       imagePullSecrets:
       - name: myregistrykey
