--- a/artifacts/crd.yaml
+++ b/artifacts/crd.yaml
@@ -14,14 +14,34 @@ spec:
     type: string
     description: Cluster ID.
     JSONPath: .spec.clusterName
-  - name: BACKUPDATE
+  - name: TIMESTAMP
     type: string
     description: Timestamp of backup.
-    JSONPath: .metadata.creationTimestamp
+    JSONPath: .status.backupTimestamp
+  - name: AVAILABLE_UNTIL
+    type: string
+    description: Retention period of backup.
+    JSONPath: .status.availableUntil
+  - name: CONTENTS
+    type: integer
+    description: Number of contents.
+    JSONPath: .status.numberOfContents
+  - name: SIZE
+    type: integer
+    description: Backup file size.
+    JSONPath: .status.backupFileSize
+  - name: TTL
+    type: string
+    description: TTL of backup.
+    JSONPath: .spec.ttl
   - name: STATUS
     type: string
     description: Status of backup.
     JSONPath: .status.phase
+  - name: AGE
+    type: date
+    description: Timestamp of backup.
+    JSONPath: .metadata.creationTimestamp
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
