--- a/artifacts/cloud-credential.yaml
+++ b/artifacts/cloud-credential.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   namespace: k8s-backup
-  name: cloud-credential
+  name: k8s-backup-ap-northeast-1
 data:
   accesskey: [base64 aws_access_key]
   secretkey: [base64 aws_secret_key]
