--- a/artifacts/cloud-credential.yaml
+++ b/artifacts/cloud-credential.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  namespace: k8s-backup
-  name: k8s-backup-ap-northeast-1
+  namespace: k8s-snap
+  name: k8s-snap-ap-northeast-1
 data:
   accesskey: [base64 aws_access_key]
   secretkey: [base64 aws_secret_key]
