--- a/artifacts/deploy.yaml
+++ b/artifacts/deploy.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: k8s-backup-controller
-  namespace: k8s-backup
+  name: k8s-snap-controller
+  namespace: k8s-snap
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: k8s-backup-controller
+      app: k8s-snap-controller
   template:
     metadata:
       labels:
-        app: k8s-backup-controller
+        app: k8s-snap-controller
     spec:
       containers:
-        - name: k8s-backup-controller
+        - name: k8s-snap-controller
           image: [image]:[TAG]
           env:
           command:
             - /k8s-backup-controller
-            - --namespace=k8s-backup
+            - --namespace=k8s-snap
