--- a/artifacts/crd.yaml
+++ b/artifacts/crd.yaml
@@ -7,24 +7,24 @@ spec:
   version: v1alpha1
   scope: Namespaced
   names:
-    kind: Backup
-    plural: backups
+    kind: Snapshot
+    plural: snapshots
   additionalPrinterColumns:
-  - name: CLUSTERNAME
+  - name: CLUSTER
     type: string
     description: Cluster ID.
     JSONPath: .spec.clusterName
   - name: TIMESTAMP
     type: string
-    description: Timestamp of backup.
-    JSONPath: .status.backupTimestamp
+    description: Timestamp of snapshot.
+    JSONPath: .status.snapshotTimestamp
   - name: RV
     type: string
-    description: Resource Version of backup.
-    JSONPath: .status.backupResourceVersion
+    description: Resource Version of snapshot.
+    JSONPath: .status.snapshotResourceVersion
   - name: AVAILABLE_UNTIL
     type: string
-    description: Retention period of backup.
+    description: Retention period of snapshot.
     JSONPath: .status.availableUntil
   - name: CONTENTS
     type: integer
@@ -32,7 +32,7 @@ spec:
     JSONPath: .status.numberOfContents
   - name: SIZE
     type: integer
-    description: Backup file size.
+    description: Snapshot file size.
     JSONPath: .status.storedFileSize
   - name: OBJECTSTORE
     type: string
@@ -40,11 +40,11 @@ spec:
     JSONPath: .spec.objectstoreConfig
   - name: STATUS
     type: string
-    description: Status of backup.
+    description: Status of snapshot.
     JSONPath: .status.phase
   - name: AGE
     type: date
-    description: Timestamp of backup.
+    description: Timestamp of snapshot.
     JSONPath: .metadata.creationTimestamp
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
@@ -59,14 +59,14 @@ spec:
     kind: Restore
     plural: restores
   additionalPrinterColumns:
-  - name: CLUSTERNAME
+  - name: CLUSTER
     type: string
     description: Cluster ID.
     JSONPath: .spec.clusterName
-  - name: BACKUPNAME
+  - name: SNAPSHOT
     type: string
-    description: Backup data ID used for restore.
-    JSONPath: .spec.backupName
+    description: Snapshot data ID used for restore.
+    JSONPath: .spec.snapshotName
   - name: TIMESTAMP
     type: string
     description: Timestamp of restore.
@@ -97,7 +97,7 @@ spec:
     JSONPath: .status.numFailed
   - name: STATUS
     type: string
-    description: Status of backup.
+    description: Status of snapshot.
     JSONPath: .status.phase
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
@@ -142,5 +142,5 @@ spec:
     JSONPath: .spec.bucket
   - name: AGE
     type: date
-    description: Timestamp of backup.
+    description: Timestamp of snapshot.
     JSONPath: .metadata.creationTimestamp
