--- a/artifacts/example-restore.yaml
+++ b/artifacts/example-restore.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: k8s-snap
 spec:
   clusterName: cluster02
-  backupName: cluster01-001
+  snapshotName: cluster01-001
   restorePreferenceName: exclude-kube-system
   kubeconfig: |
     apiVersion: v1
