--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -16,5 +16,5 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: fj3817ia/k8s-snap
-          build_args: APP_VERSION=${{ env.GITHUB_REF }},APP_REVISION=${{ env.GITHUB_SHA }}
+          build_args: APP_VERSION=${{ github.ref }},APP_REVISION=${{ github.sha }}
           tag_with_ref: true
